--- a/index(4).html
+++ b/index(4).html
@@ -6,7 +6,7 @@
 
 <body>
 
-<p align=center><img src="image/444.jpg"></p>
+<p align=center><img src="444.jpg">
 <br>
 
 <font face="標楷體">
@@ -15,7 +15,7 @@
 <br>電話：(07)724-9977
 <br>營業時間：11:00~23:00</p>
 
-<p align=center><br><embed src="film/123456.mp4" width="350" height="240"</font></p>
+<p align=center><br><embed src="123456.mp4" width="350" height="240"</font>
 
 <p align=center><br><a href="index.html">石頭日式炭火燒肉第一頁</a>
 <a href="index(2).html">石頭日式炭火燒肉第二頁</a>
